--- a/comparison/ReportTemplate.Rmd
+++ b/comparison/ReportTemplate.Rmd
@@ -164,12 +164,6 @@ for(i in 1:length(habitats)){
       cat(new_programs, sep=", ")
       cat("  \n")
       cat("  \n")
-      # cat("Differences: ")
-      # diff_df <- data_directory[['program_compare']][[par]]$diff_df
-      # for(i in 1:nrow(diff_df)){
-      #   cat(colorize(diff_df[i]$pid, diff_df[i]$color_code))
-      #   if(!i==nrow(diff_df)){cat(", ")}
-      # }
       cat("  \n")
     }
     cat("  \n")
@@ -251,6 +245,31 @@ for(i in 1:length(habitats)){
       cat("  \n")
     }
     cat("  \n")
+  }
+  
+  ##################################
+  ## SEACAR_QAQCFlagCode Overview ##
+  ##################################
+  
+  if(length(names(data_directory[[h]][["flag_overview_wide"]]))>0){
+    
+    cat("\\newpage")
+    cat("  \n")
+    cat("## Overview of SEACAR flag codes")
+    cat("  \n")
+    
+    for(par in names(data_directory[[h]][["flag_overview_wide"]])){
+      cat("  \n")
+      cat(glue("### {par}"))
+      cat("  \n")
+      wide_table <- data_directory[[h]][["flag_overview_wide"]][[par]]
+      
+      if(h=="Species"){wide_table <- wide_table %>% arrange(ProgramID, ParameterName)}
+      
+      names(wide_table) <- gsub("_", " ", names(wide_table))
+      print(make_kable(wide_table, paste0("Overview of SEACAR Flag Codes for ",par), format="latex"))
+      cat("  \n")
+    }
   }
   
   ######################
@@ -387,12 +406,38 @@ check_flag <- function(h, qtype="quantile"){
     kable_styling(latex_options=c("scale_down", "HOLD_position"),
                   position = "center")
   
+  unflagged_display <- data_combined_subset[
+    (q_subset=="high" & !str_detect(SEACAR_QAQCFlagCode, "17Q")) | 
+      (q_subset=="low" & !str_detect(SEACAR_QAQCFlagCode, "16Q")),
+    c("RowID","ProgramID","ParameterName","ResultValue","SEACAR_QAQCFlagCode",
+      "SEACAR_QAQC_Description","q_subset")]
+  
   if(nrow(flag_table)>0){
     print(flag_display_table)
   } else {
     cat("  \n")
     cat(glue("No {qtype} values detected"))
     cat("  \n")
+  }
+  
+  if(nrow(unflagged_display)>0){
+    cat("  \n")
+    cat("Entries where ResultValue is above or below quantile, but expected SEACAR_QAQCFlagCode is not being applied")
+    cat("  \n")
+    
+    names(unflagged_display) <- gsub("_", " ", names(unflagged_display))
+    
+    unflag_display_table <- make_kable(unflagged_display %>% 
+                                         select(-"SEACAR QAQC Description") %>%
+                                         arrange(ProgramID),
+                                       table_caption = "SEACAR QAQC Flag Code discrepancies",
+                                       format = "latex")
+    if(h=="Species"){
+      print(unflag_display_table)
+    }
+    
+    cat("  \n")
+    
   }
   
 }
@@ -414,8 +459,11 @@ for(i in 1:length(habitats)){
   
   cat(glue("### Quantile Check"))
   cat("  \n")
+  
+  cat("  \n")
   check_flag(h, qtype="quantile")
   cat("  \n")
+  
   cat(glue("### Threshold Check"))
   cat("  \n")
   check_flag(h, qtype="threshold")
